added github and linkedin links

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <li><a href="#resume" class="has-text-grey-dark">My resume</a></li>
         <li><a class="has-text-grey-dark">pingdrew0@gmail.com</a></li>
         <li><a class="has-text-grey-dark">(512)-995-6551</a></li>
-        <li><a class="has-text-grey-dark">Github</a></li>
-        <li><a class="has-text-grey-dark">LinkedIn</a></li>
+        <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/pingdrew" class="has-text-grey-dark">Github</a></li>
+        <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/andrew-wilson-b4013220a/" class="has-text-grey-dark">LinkedIn</a></li>
       </ul>
     </aside>
 
