--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <div id="blobmania" class="box has-background-grey-lighter">
-          <h3 class="is-size-3 menu-label has-text-black">UT PROJECT 2: Blob Mania!</h3>
+          <h3 class="is-size-3 menu-label has-text-black">UT PROJECT 2: Multi Mania!</h3>
           <a href="https://blob-mania-322037286e7b.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/blobmania.png"></a>
           <p>A browser based multiplayer game using websocket and the MVC (model view controller) architecture to connect up to four players in a lobby to duke it out with database updated highscores you can keep track of by logging in.</p>
         </div>
