fixed mobile bug

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <!-- Header/Hero -->
-  <nav id="hero" class=" hero is-medium is-link has-text-centered mb-0">
+  <nav id="hero" class="nav hero is-medium is-link has-text-centered mb-0">
     <div class="title-body has-background-dark">
       <h1 class="title  is-underlined is-1">
         Professional Portfolio
@@ -22,7 +22,7 @@
   </nav>
 
   <!-- Sidebar for Muscle Groups -->
-  <div class="columns has-background-dark is-one-third box">
+  <div id="content" class="columns has-background-dark is-one-third box">
     <aside class="menu column">
       <h3 class="is-medium menu-label has-text-light title is-4">
         Projects
