--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </p>
   </nav>
 
-  <!-- Sidebar for Muscle Groups -->
+  <!-- Sidebar for info -->
   <div id="content" class="columns has-background-dark is-one-third box">
     <aside class="menu column">
       <h3 class="is-medium menu-label has-text-light title is-4">
