RESUME FINAL FIX

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
 
         <div id="resume" class="box has-background-grey-lighter">
-          <img src="./assets/images/resume.png">
+          <img src="./assets/images/resume2.png">
         </div>
 
         <div id="certificate" class="box has-background-grey-lighter">
