new images, new projects, new resume

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       </h3>
 
       <ul id="projects" class="box menu-list has-background-grey-lighter">
+        <li><a href="#customcomputersolutions" class="has-text-grey-dark">Small Business: Custom Computer Solutions</a></li>
+        <li><a href="#fittutor" class="has-text-grey-dark">Self Project: FitTutor</a></li>
+        <li><a href="#outdoorvibeshub" class="has-text-grey-dark">Self Project: OutdoorVibesHub</a></li>
         <li><a href="#sidekick" class="has-text-grey-dark">UT Project 3: Sidekick POS</a></li>
         <li><a href="#blobmania" class="has-text-grey-dark">UT Project 2: Blob Mania!</a></li>
         <li><a href="#formfixer" class="has-text-grey-dark">UT Project 1: Form-Fixer</a></li>
@@ -68,7 +71,11 @@
         <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/pingdrew" class="has-text-grey-dark">Github</a></li>
         <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/andrew-wilson-b4013220a/" class="has-text-grey-dark">LinkedIn</a></li>
       </ul>
-      
+
+      <h3 class="is-medium menu-label has-text-light title is-4">
+        
+      </h3>
+
       <div id="resume" class="box has-background-grey-lighter">
         <img src="./assets/images/resume2.png">
       </div>
@@ -80,6 +87,24 @@
 
     <div class="column is-two-thirds has-text-centered" id="fetch-results">
       <ul id="results-list">
+        <div id="customcomputersolutions" class="box has-background-grey-lighter">
+          <h3 class="is-size-3 menu-label has-text-black">Small Business: Custom Computer Solutions</h3>
+          <a href="https://customcomputersolutions.thegotnext.com/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/customcomputersolutions.jpg"></a>
+          <p>Simple wordpress site showcasing my small business and the services I offer. The form you can fill out sends me an email and we can get in touch.</p>
+        </div>
+
+        <div id="fittutor" class="box has-background-grey-lighter">
+          <h3 class="is-size-3 menu-label has-text-black">Self Project: FitTutor</h3>
+          <a href="#" target="_blank" rel="noopener noreferrer"><img src="./assets/images/fittutor.jpg"></a>
+          <p>Work in progress community moderated health and nutrition forum where people can connect with verified health professionals for encyclopedic knowledge for what it should be: free.</p>
+        </div>
+
+        <div id="outdoorvibeshub" class="box has-background-grey-lighter">
+          <h3 class="is-size-3 menu-label has-text-black">Self Project: OutdoorVibesHub</h3>
+          <a href="https://www.OutdoorVibesHub.com" target="_blank" rel="noopener noreferrer"><img src="./assets/images/outdoorvibeshub.jpg"></a>
+          <p>Work in progress and proof of concept Wordpress site showcasing my learned skills in wordpress and linking google and amazon affiliate for ad revenue.</p>
+        </div>
+
         <div id="sidekick" class="box has-background-grey-lighter">
           <h3 class="is-size-3 menu-label has-text-black">UT PROJECT 3: Sidekick POS</h3>
           <a href="https://sidekick-pos-a138f104c04c.herokuapp.com" target="_blank" rel="noopener noreferrer"><img src="./assets/images/sidekick.jpg"></a>
