added freelance gig

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </h3>
 
       <ul id="projects" class="box menu-list has-background-grey-lighter">
+        <li><a href="#brentwoodcommercialllc" class="has-text-grey-dark">Client Website: Brentwood Commercial LLC</a></li>
         <li><a href="#customcomputersolutions" class="has-text-grey-dark">Small Business: Custom Computer Solutions</a></li>
         <li><a href="#fittutor" class="has-text-grey-dark">Self Project: FitTutor</a></li>
         <li><a href="#outdoorvibeshub" class="has-text-grey-dark">Self Project: OutdoorVibesHub</a></li>
@@ -87,6 +88,12 @@
 
     <div class="column is-two-thirds has-text-centered" id="fetch-results">
       <ul id="results-list">
+        <div id="brentwoodcommercialllc" class="box has-background-grey-lighter">
+          <h3 class="is-size-3 menu-label has-text-black">Small Business: Custom Computer Solutions</h3>
+          <a href="https://www.brentwoodcommercialllc.com/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/brentwoodcommercial.jpg"></a>
+          <p>A client for my Freelance Website Solutions. One page Wordpress site showcasing their business and the services they offer.</p>
+        </div>
+
         <div id="customcomputersolutions" class="box has-background-grey-lighter">
           <h3 class="is-size-3 menu-label has-text-black">Small Business: Custom Computer Solutions</h3>
           <a href="https://customcomputersolutions.thegotnext.com/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/customcomputersolutions.jpg"></a>
