--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="column is-two-thirds has-text-centered" id="fetch-results">
       <ul id="results-list">
         <div id="brentwoodcommercialllc" class="box has-background-grey-lighter">
-          <h3 class="is-size-3 menu-label has-text-black">Small Business: Custom Computer Solutions</h3>
+          <h3 class="is-size-3 menu-label has-text-black">Client Website: Brentwood Commercial LLC</h3>
           <a href="https://www.brentwoodcommercialllc.com/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/brentwoodcommercial.jpg"></a>
           <p>A client for my Freelance Website Solutions. One page Wordpress site showcasing their business and the services they offer.</p>
         </div>
