Update formfixer link

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <div id="formfixer" class="box has-background-grey-lighter">
           <h3 class="is-size-3 menu-label has-text-black">UT PROJECT 1: Form-Fixer</h3>
-          <a href="https://pingdrew.github.io/project-1-group-6/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/form-fixer.jpg"></a>
+          <a href="https://pingdrew.github.io/Form-Fixer/" target="_blank" rel="noopener noreferrer"><img src="./assets/images/form-fixer.jpg"></a>
           <p>An encyclopedia for preventing injuries. Using API Ninjas' exersise api and Youtubes video search api you can look through or search an exersise and find an accompanying description and video to help you be safe.</p>
         </div>
         
