Update resume path

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </h3>
 
       <div id="resume" class="box has-background-grey-lighter">
-        <img src="./assets/images/resume2.png">
+        <img src="./assets/images/WilsonFeb2025Resume.pdf">
       </div>
 
       <div id="certificate" class="box has-background-grey-lighter">
