--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </h3>
 
       <div id="resume" class="box has-background-grey-lighter">
-        <img src="./assets/images/WilsonFeb2025Resume.pdf">
+        <embed src="./assets/images/WilsonMarch2025Resume.pdf" width="500" height="375" type="application/pdf">
       </div>
 
       <div id="certificate" class="box has-background-grey-lighter">
