fixed resume issues

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </h3>
 
       <div id="resume" class="box has-background-grey-lighter">
-        <embed src="./assets/images/WilsonMarch2025Resume.pdf" width="500" height="375" type="application/pdf">
+        <iframe src="./assets/images/WilsonMarch2025Resume.pdf#toolbar=0" width="100%" height="500" style="border:none;"></iframe>
       </div>
 
       <div id="certificate" class="box has-background-grey-lighter">
