--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <iframe src="./assets/images/WilsonMarch2025Resume.pdf#toolbar=0" width="100%" height="500" style="border:none;"></iframe>
       </div>
 
-      <div id="resume" class="box has-background-grey-lighter">
+      <div id="letterofrec" class="box has-background-grey-lighter">
         <iframe src="./assets/images/WilsonLORandPOE.pdf#toolbar=0" width="100%" height="500" style="border:none;"></iframe>
       </div>
 
