--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
 
       <div id="letterofrec" class="box has-background-grey-lighter">
-        <iframe src="./assets/images/WilsonLORandPOE.pdf#toolbar=0" width="100%" height="500" style="border:none;"></iframe>
+        <img src="./assets/images/WilsonLORandPOE.png">
       </div>
 
       <div id="certificate" class="box has-background-grey-lighter">
